--- a/src/app/index.css
+++ b/src/app/index.css
@@ -44,3 +44,34 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+.playerRepeatImg {
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  border-radius: 50%;
+  margin-left: 12px;
+  z-index: 10;
+  width: 33px;
+  height: 33px;
+  transition: background-color 0.2s;
+}
+
+.playerRepeatImg:hover {
+  background-color: #e5e7e8;
+}
+
+.goBackButton {
+  padding: 0 5px;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.2s;
+}
+
+.goBackButton img {
+  margin-top: 7px;
+}
+
+.goBackButton:hover {
+  background-color: #e5e7e8;
+}
