--- a/src/app/index.css
+++ b/src/app/index.css
@@ -1,6 +1,7 @@
 #root {
   min-height: 100vh;
-  background: linear-gradient(135deg, rgba(255,255,255,1) 0%, rgba(192,229,233,1) 100%);
+  /*background: linear-gradient(135deg, rgba(255,255,255,1) 0%, rgba(192,229,233,1) 100%);*/
+  background: white;
 }
 
 html, body, div, span, applet, object, iframe,
@@ -53,7 +54,7 @@ table {
 
 
 .matrixCard {
-  width: 550px;
+  width: 100%;
 }
 
 @media screen and (max-width: 552px){
