--- a/src/app/index.css
+++ b/src/app/index.css
@@ -1,7 +1,6 @@
 #root {
   min-height: 100vh;
-  /*background: linear-gradient(135deg, rgba(255,255,255,1) 0%, rgba(192,229,233,1) 100%);*/
-  background: white;
+  background: linear-gradient(135deg, rgba(192,229,233,1) 0%, rgba(255,255,255,1) 100%);
 }
 
 html, body, div, span, applet, object, iframe,
